Chat and user list.

--- a/app/assets/stylesheets/cyborg.css
+++ b/app/assets/stylesheets/cyborg.css
@@ -302,7 +302,7 @@ body {
   font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
-  color: #888888;
+  color: #cccccc;
   background-color: #060606;
 }
 
