--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -2,9 +2,9 @@
 
 .row
   .col-md-8
-    Whasup?
+    %ul#rudy_list
   .col-md-4
-    .panel.panel-primary
+    .panel.panel-primary#chat_panel
       .panel-heading.text-center
         %strong Chat
       .panel-body#chat_text
