Name in registration.

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -12,8 +12,12 @@
           = devise_error_messages!
 
       .form-group
+        = f.label :name, class: 'control-label'
+        = f.text_field :name, class: 'form-control', autocomplete: "off", autofocus: true
+
+      .form-group
         = f.label :email, class: 'control-label'
-        = f.email_field :email, class: 'form-control', autocomplete: "off", autofocus: true
+        = f.email_field :email, class: 'form-control', autocomplete: "off"
 
       .form-group
         = f.label :password, class: 'control-label'
