--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -2,7 +2,7 @@
 
 .row
   .col-md-8
-    %ul#rudy_list
+    %h3#rudy_list
   .col-md-4
     .panel.panel-primary#chat_panel
       .panel-heading.text-center
