--- a/app/assets/stylesheets/chat.css.scss
+++ b/app/assets/stylesheets/chat.css.scss
@@ -2,6 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#chat_panel {
+  border-top: 0;
+  border-radius: 0 0 4px 4px;
+}
 #chat_text {
   height: 250px;
   overflow-y: scroll;
