--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
           - else
             %li{ class: url_for == new_rudy_session_path      ? "active" : nil }= link_to "Sign in", new_rudy_session_path
             %li{ class: url_for == new_rudy_registration_path ? "active" : nil }= link_to "Sign up", new_rudy_registration_path
-        %h3= link_to "Ska Music Room", root_path
+        %h3= link_to "Ska Room", root_path
     .container
       = yield
     .container
