--- a/app/assets/stylesheets/jumbotron.narrow.css
+++ b/app/assets/stylesheets/jumbotron.narrow.css
@@ -28,7 +28,7 @@ body {
 
 @media (min-width: 768px) {
   .container {
-    max-width: 730px;
+    max-width: 100%;
   }
 }
 .container-narrow > hr {
