--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -2,6 +2,10 @@
 
 .row
   .col-md-8
+    .panel.panel-default
+      .panel-heading.text-center
+        %strong Now Playing
+      .panel-body#now_playing
     %h3#rudy_list
   .col-md-4
     %ul.nav.nav-tabs.nav-justified
@@ -13,7 +17,12 @@
         = form_tag( '/chat', role: 'form', id: 'chat_form' ) do
           = text_field :chat, :message, class: 'form-control input-sm', autocomplete: "off", autofocus: true, placeholder: 'hep hep hep hep'
     .panel.panel-primary#queue_panel
-      .panel-body#queue_list Coming soon...
+      .panel-body#queue_list
+        - Song.order( :title ).each do |song|
+          %p{ id: song.id }
+            = '"' + song.title + '"'
+            %br/
+            = song.artist
       .panel-footer.text-center#queue_upload_form
         = link_to "Upload music <span class='glyphicon glyphicon-cloud-upload'></span>".html_safe, queue_upload_path, id: "upload_music_link", class: "btn btn-primary btn-sm"
         = file_field_tag "upload_music", id: "upload_music", 'data-url' => queue_upload_path, multiple: true, style: 'display:none'
