--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -4,6 +4,7 @@
   .col-md-8
     .panel.panel-default
       .panel-heading.text-center
+        .pull-right= link_to "Spin", "/spin", class: "btn btn-default btn-sm", id: "spin"
         %strong Now Playing
       .panel-body#now_playing
     %h3#rudy_list
