--- a/app/assets/stylesheets/jumbotron.narrow.css
+++ b/app/assets/stylesheets/jumbotron.narrow.css
@@ -30,6 +30,9 @@ body {
   .container {
     max-width: 100%;
   }
+  #splash .container {
+    max-width: 730px;
+  }
 }
 .container-narrow > hr {
   margin: 30px 0;
