--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
           - else
             %li{ class: url_for == new_rudy_session_path      ? "active" : nil }= link_to "Sign in", new_rudy_session_path
             %li{ class: url_for == new_rudy_registration_path ? "active" : nil }= link_to "Sign up", new_rudy_registration_path
-        %h3= link_to "Ska Room", root_path
+        %h3 Ska Room
     .container
       = yield
     .container
@@ -25,7 +25,7 @@
           %p.text-left
             &copy;
             = Date.today.year
-            = link_to( "Digital Charleston", "http://www.digitalcharleston.com" ) + ", LLC"
+            = link_to( "Digital Charleston", "http://www.digitalcharleston.com" ) + ", LLC", target: "_blank"
         .col-md-6
           %p.text-right
-            = link_to "Ska Music on Facebook", "https://www.facebook.com/SkaMusicRoom"
+            = link_to "Ska Music on Facebook", "https://www.facebook.com/SkaMusicRoom", target: "_blank"
