Links away from the page.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,7 @@
           %p.text-left
             &copy;
             = Date.today.year
-            = link_to( "Digital Charleston", "http://www.digitalcharleston.com" ) + ", LLC", target: "_blank"
+            = link_to( "Digital Charleston", "http://www.digitalcharleston.com", target: "_blank" ) + ", LLC"
         .col-md-6
           %p.text-right
             = link_to "Ska Music on Facebook", "https://www.facebook.com/SkaMusicRoom", target: "_blank"
