--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -2,7 +2,7 @@
 
 .row
   .col-md-8
-    %audio#now_playing_audio
+    %audio#now_playing_audio{ volume: 0.5 }
       %source#now_playing_audio_source{ type: "audio/mp3" }
     .panel.panel-default
       .panel-heading.text-center
@@ -10,11 +10,17 @@
       .panel-body#now_playing
     %h3#rudy_list
   .col-md-4
-    #tools.well
-      = link_to "<span class='glyphicon glyphicon-volume-up'></span>".html_safe, "/volume_up", class: "btn btn-default", id: "volume"
-      =# link_to "<span class='glyphicon glyphicon-record'></span>".html_safe, "/spin", class: "btn btn-default", id: "spin"
-      = link_to "<span class='glyphicon glyphicon-thumbs-down'></span>".html_safe, "/lame", class: "btn btn-default", id: "lame"
-      = link_to "<span class='glyphicon glyphicon-thumbs-up'></span>".html_safe, "/awesome", class: "btn btn-default", id: "awesome"
+    %p#tools
+      .well
+        .btn-group
+          = link_to "<span class='glyphicon glyphicon-volume-off'></span>".html_safe, "/volume_off", class: "btn btn-default", id: "volume_off", disabled: false
+          = link_to "<span class='glyphicon glyphicon-volume-down'></span>".html_safe, "/volume_down", class: "btn btn-default", id: "volume_down", disabled: false
+          = link_to "<span class='glyphicon glyphicon-volume-up'></span>".html_safe, "/volume_up", class: "btn btn-default", id: "volume_up", disabled: false
+        =# link_to "<span class='glyphicon glyphicon-record'></span>".html_safe, "/spin", class: "btn btn-default", id: "spin"
+        .btn-group
+          = link_to "<span class='glyphicon glyphicon-thumbs-down'></span>".html_safe, "/lame", class: "btn btn-default", id: "lame"
+          = link_to "<span class='glyphicon glyphicon-minus'></span>".html_safe, "/meh", class: "btn btn-default", id: "meh"
+          = link_to "<span class='glyphicon glyphicon-thumbs-up'></span>".html_safe, "/awesome", class: "btn btn-default", id: "awesome"
     %ul.nav.nav-tabs.nav-justified
       %li#chat_tab.active= link_to "<span class='glyphicon glyphicon-comment'></span>".html_safe, root_path
       %li#queue_tab= link_to "<span class='glyphicon glyphicon-music'></span>".html_safe, root_path
