--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -8,6 +8,9 @@
       .panel-heading.text-center
         %strong Now Playing
       .panel-body#now_playing
+    .panel.panel-info
+      .panel-body
+        %h3#dj_list
     %h3#rudy_list
   .col-md-4
     %p#tools
@@ -16,7 +19,7 @@
           = link_to "<span class='glyphicon glyphicon-volume-off'></span>".html_safe, "/volume_off", class: "btn btn-default", id: "volume_off", disabled: false
           = link_to "<span class='glyphicon glyphicon-volume-down'></span>".html_safe, "/volume_down", class: "btn btn-default", id: "volume_down", disabled: false
           = link_to "<span class='glyphicon glyphicon-volume-up'></span>".html_safe, "/volume_up", class: "btn btn-default", id: "volume_up", disabled: false
-        =# link_to "<span class='glyphicon glyphicon-record'></span>".html_safe, "/spin", class: "btn btn-default", id: "spin"
+        = link_to "<span class='glyphicon glyphicon-record'></span>".html_safe, "/spin", class: "btn btn-default", id: "spin"
         .btn-group
           = link_to "<span class='glyphicon glyphicon-thumbs-down'></span>".html_safe, "/lame", class: "btn btn-default", id: "lame"
           = link_to "<span class='glyphicon glyphicon-minus'></span>".html_safe, "/meh", class: "btn btn-default", id: "meh"
